--- a/app/Resources/views/global.html.twig
+++ b/app/Resources/views/global.html.twig
@@ -4,7 +4,9 @@
 
 {% block param %}
     {{ parent() }}
-    <li><a href="{{ path('gospelcenterAdminGlobal_pages') }}">Admin</a></li>
+    <li><a href="{{ path('gospelcenterAdminGlobal_persons_add') }}">Add a Contact</a></li>
+    <li><a href="{{ path('gospelcenterAdminGlobal_persons') }}">Manage Contacts</a></li>
+    <li><a href="{{ path('gospelcenterAdminGlobal_pages') }}">Dashboard</a></li>
 {% endblock %}
 
 {% block stylesheets %}
