--- a/web/sass/layout.scss
+++ b/web/sass/layout.scss
@@ -413,7 +413,7 @@ a {
             #logo {
                 margin: 0 auto;
                 display: none;
-                
+                padding-top: 15%;
             }
             
             #news {
