--- a/app/Resources/views/local.html.twig
+++ b/app/Resources/views/local.html.twig
@@ -3,10 +3,13 @@
 {% block classPage %}local{% endblock %}
 
 {% block param %}
-    <li><a href="{{ path('gospelcenterAdmin_celebrations_add', {'center': center.ref}) }}">Create a celebration</a></li>
-    <li><a href="{{ path('gospelcenterAdmin_events_add', {'center': center.ref}) }}">Create an event</a></li>
-    <li><a href="{{ path('gospelcenterAdmin_events', {'center': center.ref}) }}">Manage events</a></li>
-    <li><a href="{{ path('gospelcenterAdmin_celebrations', {'center': center.ref}) }}">Admin</a></li>
+    <li><a href="{{ path('gospelcenterAdmin_celebrations_add', {'center': center.ref}) }}">Create a Celebration</a></li>
+    <li><a href="{{ path('gospelcenterAdmin_celebrations', {'center': center.ref}) }}">Manage Celebrations</a></li>
+    <li><a href="{{ path('gospelcenterAdmin_persons_add', {'center': center.ref}) }}">Create a Contact</a></li>
+    <li><a href="{{ path('gospelcenterAdmin_persons', {'center': center.ref}) }}">Manage Contacts</a></li>
+    <li><a href="{{ path('gospelcenterAdmin_events_add', {'center': center.ref}) }}">Create an Event</a></li>
+    <li><a href="{{ path('gospelcenterAdmin_events', {'center': center.ref}) }}">Manage Events</a></li>
+    <li><a href="{{ path('gospelcenterAdmin_celebrations', {'center': center.ref}) }}">Dashboard</a></li>
     {{ parent() }}
 {% endblock %}
 
