--- a/src/gospelcenter/PageBundle/Resources/views/AdminPage/edit.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminPage/edit.html.twig
@@ -21,6 +21,7 @@
     <form class="page" action="{{ path('gospelcenterAdmin_pages_edit', {'center': center.ref, 'page': objPage.id}) }}" method="post" {{ form_enctype(form) }}>
         <nav class="tools">
     		<input type="submit" class="buttonRounded" />
+    		<a href="{{ path('gospelcenterAdmin_pages_delete', {'center': center.ref, 'page': objPage.id}) }}" class="buttonRounded">Delete</a>
     	</nav>
     	
     	{{ form_widget(form.ref) }}
