--- a/web/sass/admin.scss
+++ b/web/sass/admin.scss
@@ -632,6 +632,10 @@
                     font-family: $font-light;
         	    }
         	    
+        	    div.error_list {
+            	    margin-left: 22%;
+        	    }
+        	    
         	    textarea {
             	    float: right;
             	    min-height: 200px;
