--- a/src/gospelcenter/ImageBundle/Resources/views/AdminGlobal/add.html.twig
+++ b/src/gospelcenter/ImageBundle/Resources/views/AdminGlobal/add.html.twig
@@ -25,9 +25,17 @@
     	</nav>
     	
         {{ form_widget(form.file) }}
+        {{ form_errors(form.file) }}
+        
         {{ form_widget(form.title, {'attr': {'placeholder': 'Title'} }) }}
+        {{ form_errors(form.title) }}
+        
         {{ form_widget(form.type, {'attr': {'placeholder': 'Type'} }) }}
+        {{ form_errors(form.type) }}
+        
         {{ form_widget(form.description, {'attr': {'placeholder': 'Description'} }) }}
+        {{ form_errors(form.description) }}
+        
         {{ form_rest(form) }}
         
     </form>
