--- a/src/gospelcenter/ImageBundle/Resources/views/AdminGlobal/edit.html.twig
+++ b/src/gospelcenter/ImageBundle/Resources/views/AdminGlobal/edit.html.twig
@@ -27,13 +27,20 @@
     	</nav>
     	
     	{{ form_widget(form.file) }}
+    	{{ form_errors(form.file) }}
     	<div id="editImage" data-input="{{ form.file.vars.id }}">
     	    <img src="{{ asset(image.webPath) }}" alt="{{ image.alt }}" />
     	</div>
     	
         {{ form_widget(form.title, {'attr': {'placeholder': 'Title'} }) }}
+        {{ form_errors(form.title) }}
+        
         {{ form_widget(form.type, {'attr': {'placeholder': 'Type'} }) }}
+        {{ form_errors(form.type) }}
+        
         {{ form_widget(form.description, {'attr': {'placeholder': 'Description'} }) }}
+        {{ form_errors(form.description) }}
+        
         {{ form_rest(form) }}
     </form>
     
