--- a/src/gospelcenter/PageBundle/Resources/views/AdminPage/youthEdit.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminPage/youthEdit.html.twig
@@ -25,14 +25,26 @@
     	</nav>
     	
         {{ form_widget(form.title, {'attr': {'placeholder': 'Title'} }) }}
+        {{ form_errors(form.title) }}
+        
         {{ form_widget(form.alias, {'attr': {'placeholder': 'Alias: gospel-center.org/. . .'} }) }}
+        {{ form_errors(form.alias) }}
+        
         {{ form_widget(form.slogan, {'attr': {'placeholder': 'Slogan'} }) }}
+        {{ form_errors(form.slogan) }}
+        
         {{ form_widget(form.sort) }}
+        {{ form_errors(form.sort) }}
+        
         {{ form_widget(form.language) }}
+        {{ form_errors(form.language) }}
+        
         <fieldset id="slides">
             <legend>Slides</legend>
             {{ form_widget(form.slides) }}
+            {{ form_errors(form.slides) }}
         </fieldset>
+        
         {{ form_rest(form) }}
     </form>
     
