--- a/src/gospelcenter/PageBundle/Resources/views/AdminPageGlobal/edit.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminPageGlobal/edit.html.twig
@@ -24,14 +24,26 @@
     	</nav>
     	
     	{{ form_widget(form.ref) }}
+        {{ form_errors(form.ref) }}
+        
         {{ form_widget(form.title, {'attr': {'placeholder': 'Title'} }) }}
-        {{ form_widget(form.slogan, {'attr': {'placeholder': 'Slogan'} }) }}
+        {{ form_errors(form.title) }}
+        
+        {{ form_widget(form.slogan, {'attr': {'placeholder': 'Slogan', 'class': 'elastic'} }) }}
+        {{ form_errors(form.slogan) }}
+        
         {{ form_widget(form.template) }}
+        {{ form_errors(form.template) }}
+        
         {{ form_widget(form.language) }}
+        {{ form_errors(form.language) }}
+        
         <fieldset id="slides">
             <legend>Slides</legend>
             {{ form_widget(form.slides) }}
+            {{ form_errors(form.slides) }}
         </fieldset>
+        
         {{ form_rest(form) }}
     </form>
     
