--- a/web/sass/form.scss
+++ b/web/sass/form.scss
@@ -48,6 +48,50 @@ form {
 		}
     }
     
+    div.error_list {
+        position: relative;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        
+        div.arrow {
+        	z-index: 1001;
+        	position: absolute;
+        	left: 15px;
+        	top: -10px;
+        	        	
+        	div.arrow_up_border {
+            	width: 0; 
+            	height: 0; 
+            	border-left: 11px solid transparent;
+            	border-right: 11px solid transparent;
+            	border-bottom: 10px solid $redTop;
+            }
+            
+            div.arrow_up {
+            	width: 0; 
+            	height: 0; 
+            	border-left: 11px solid transparent;
+            	border-right: 11px solid transparent;
+            	border-bottom: 10px solid $redTop;
+            	margin-left: 0px;
+            	margin-top: -9px;
+            	
+            }
+        }
+        
+        div.list {
+            display: inline-block;
+            @include gradient($red, $redBottom, $redTop);
+            @include border-radius (3px);
+            padding: 5px;
+            
+            span {
+                color: $white;
+                display: block;
+            }
+        }
+    }
+    
     #editImage {
         display: block;
         width: auto;
