--- a/app/Resources/views/local.html.twig
+++ b/app/Resources/views/local.html.twig
@@ -10,6 +10,7 @@
     <li><a href="{{ path('gospelcenterAdmin_events_add', {'center': center.ref}) }}">Create an Event</a></li>
     <li><a href="{{ path('gospelcenterAdmin_events', {'center': center.ref}) }}">Manage Events</a></li>
     <li><a href="{{ path('gospelcenterAdmin_celebrations', {'center': center.ref}) }}">Dashboard</a></li>
+    <li class="line"></li>
     {{ parent() }}
 {% endblock %}
 
