--- a/app/Resources/views/global.html.twig
+++ b/app/Resources/views/global.html.twig
@@ -3,10 +3,11 @@
 {% block classPage %}global{% endblock %}
 
 {% block param %}
-    {{ parent() }}
     <li><a href="{{ path('gospelcenterAdminGlobal_persons_add') }}">Add a Contact</a></li>
     <li><a href="{{ path('gospelcenterAdminGlobal_persons') }}">Manage Contacts</a></li>
     <li><a href="{{ path('gospelcenterAdminGlobal_pages') }}">Dashboard</a></li>
+    <li class="line"></li>
+    {{ parent() }}
 {% endblock %}
 
 {% block stylesheets %}
