--- a/web/sass/layout.scss
+++ b/web/sass/layout.scss
@@ -215,6 +215,10 @@ a {
     			
     			list-style-type: none;
     			
+    			&.line {
+        			border-bottom: 1px solid lighten($grayLight, 20%);
+    			}
+    			
     			a {
     				padding: 5px 5px 5px 10px;
     				color: $black;
@@ -659,6 +663,45 @@ a {
                 display: block;
                 float: right;
                 cursor: pointer;
+            }
+        }
+    }
+}
+
+
+#page.login {
+    #container {
+        
+        article.error {
+            color: $red;
+            text-align: center;
+            margin: 20px 0;
+            font-size: 1.2em;
+        }
+        
+        form {
+            width: 300px;
+            margin: 40px auto 0;
+            
+            input[type=text],
+            input[type=password] {
+                display: block;
+                margin: 20px 0;
+                width: 94%;
+                background: none;
+                border: 1px solid $grayLight;
+                @include border-radius (3px);
+                outline: none;
+                padding: 5px 3%;
+                font-size: 1.4em;
+                font-family: $font-light;
+                color: $grayDark;
+            }
+            
+            input[type=submit] {
+                display: block;
+                margin-top: 40px;
+                float: right;
             }
         }
     }
