--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -50,6 +50,7 @@
     		        <nav id="param_nav">
     		        	<ul>
     		        		{% block param %}
+    		        		    <li><a href="{{ path('fos_user_change_password') }}">Change your password</a></li>
     		        		    <li><a href="{{ path('fos_user_profile_edit') }}">Edit your profile</a></li>
     		        		    <li><a href="{{ path('fos_user_security_logout') }}">Sign out</a></li>
     						{% endblock %}
