--- a/web/css/layout.css
+++ b/web/css/layout.css
@@ -157,6 +157,90 @@ section.audio {
     font-size: 2em;
     display: inline-block; }
 
+#page.login #container article.error, #page.profile #container article.error, #page.changePassword #container article.error, #page.register #container article.error {
+  color: #d91a15;
+  text-align: center;
+  margin: 20px 0;
+  font-size: 1.2em; }
+#page.login #container form, #page.profile #container form, #page.changePassword #container form, #page.register #container form {
+  width: 300px;
+  margin: 40px auto 0; }
+  #page.login #container form input[type=text],
+  #page.login #container form input[type=password],
+  #page.login #container form input[type=email], #page.profile #container form input[type=text],
+  #page.profile #container form input[type=password],
+  #page.profile #container form input[type=email], #page.changePassword #container form input[type=text],
+  #page.changePassword #container form input[type=password],
+  #page.changePassword #container form input[type=email], #page.register #container form input[type=text],
+  #page.register #container form input[type=password],
+  #page.register #container form input[type=email] {
+    display: block;
+    margin: 20px 0;
+    width: 94%;
+    background: none;
+    border: 1px solid #878787;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+    outline: none;
+    padding: 5px 3%;
+    font-size: 1.4em;
+    font-family: "Radikal-Light", "Radikal", sans-serif;
+    color: #313131; }
+  #page.login #container form input[type=submit], #page.profile #container form input[type=submit], #page.changePassword #container form input[type=submit], #page.register #container form input[type=submit] {
+    display: block;
+    margin-top: 20px;
+    float: right;
+    cursor: pointer; }
+#page.login #container div.error_list, #page.profile #container div.error_list, #page.changePassword #container div.error_list, #page.register #container div.error_list {
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 20px; }
+  #page.login #container div.error_list div.arrow, #page.profile #container div.error_list div.arrow, #page.changePassword #container div.error_list div.arrow, #page.register #container div.error_list div.arrow {
+    z-index: 1001;
+    position: absolute;
+    left: 15px;
+    top: -10px; }
+    #page.login #container div.error_list div.arrow div.arrow_up_border, #page.profile #container div.error_list div.arrow div.arrow_up_border, #page.changePassword #container div.error_list div.arrow div.arrow_up_border, #page.register #container div.error_list div.arrow div.arrow_up_border {
+      width: 0;
+      height: 0;
+      border-left: 11px solid transparent;
+      border-right: 11px solid transparent;
+      border-bottom: 10px solid #e22416; }
+    #page.login #container div.error_list div.arrow div.arrow_up, #page.profile #container div.error_list div.arrow div.arrow_up, #page.changePassword #container div.error_list div.arrow div.arrow_up, #page.register #container div.error_list div.arrow div.arrow_up {
+      width: 0;
+      height: 0;
+      border-left: 11px solid transparent;
+      border-right: 11px solid transparent;
+      border-bottom: 10px solid #e22416;
+      margin-left: 0px;
+      margin-top: -9px; }
+  #page.login #container div.error_list div.list, #page.profile #container div.error_list div.list, #page.changePassword #container div.error_list div.list, #page.register #container div.error_list div.list {
+    display: inline-block;
+    background: #d91a15;
+    background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #d11115), color-stop(1, #e22416));
+    background: -ms-linear-gradient(bottom, #d11115, #e22416);
+    background: -moz-linear-gradient(center bottom, #d11115 0%, #e22416 100%);
+    background: -o-linear-gradient(#e22416, #d11115);
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled='false', startColorstr=$start, endColorstr=$stop);
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+    padding: 5px; }
+    #page.login #container div.error_list div.list span, #page.profile #container div.error_list div.list span, #page.changePassword #container div.error_list div.list span, #page.register #container div.error_list div.list span {
+      color: #fdfdfc;
+      display: block; }
+#page.profile #container {
+  width: 70%;
+  max-width: 1300px;
+  margin: 0 auto; }
+  #page.profile #container em {
+    font-family: "Radikal-Bold", "Radikal", sans-serif; }
+
 /***************/
 /*** sub nav ***/
 /***************/
@@ -604,36 +688,6 @@ a:focus {
       display: block;
       float: right;
       cursor: pointer; }
-
-#page.login #container article.error {
-  color: #d91a15;
-  text-align: center;
-  margin: 20px 0;
-  font-size: 1.2em; }
-#page.login #container form {
-  width: 300px;
-  margin: 40px auto 0; }
-  #page.login #container form input[type=text],
-  #page.login #container form input[type=password] {
-    display: block;
-    margin: 20px 0;
-    width: 94%;
-    background: none;
-    border: 1px solid #878787;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    border-radius: 3px;
-    outline: none;
-    padding: 5px 3%;
-    font-size: 1.4em;
-    font-family: "Radikal-Light", "Radikal", sans-serif;
-    color: #313131; }
-  #page.login #container form input[type=submit] {
-    display: block;
-    margin-top: 40px;
-    float: right; }
 
 /*******************/
 /**** Youth nav ****/
