--- a/app/Resources/views/adminGlobal.html.twig
+++ b/app/Resources/views/adminGlobal.html.twig
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block param %}
+    <li><a href="{{ path('fos_user_registration_register') }}">Register a user</a></li>
     <li><a href="{{ path('gospelcenterPageGlobal_home') }}">Back to website</a></li>
 {% endblock %}
 
